<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/input_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/example_name"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:layout_below="@+id/editTextName"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName"
        android:layout_marginTop="36dp"
        android:text="@string/example_birthday"
        android:layout_alignRight="@+id/textViewName"
        android:layout_alignEnd="@+id/textViewName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_birthday"
        android:id="@+id/textViewDate"
        android:layout_below="@+id/editTextName"
        android:layout_alignLeft="@+id/editTextDate"
        android:layout_alignStart="@+id/editTextDate" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="82dp"
        android:layout_marginEnd="82dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_sex"
            android:id="@+id/textViewInputSex" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButtonMale"
             />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButtonFemale" />
    </RadioGroup>

</RelativeLayout>
